--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
-<head>
-
-</head>
-<body>
-
-<div class="center_div">
-  <h1>Hello World!</h1>
-  <p>Branch web sdk inetgartion test.</p>
-</div>
-
+   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title></title>
+      <script>
+         // load Branch
+         (function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener banner closeBanner closeJourney data deepview deepviewCta first init link logout removeListener setBranchViewData setIdentity track trackCommerceEvent logEvent disableTracking getBrowserFingerprintId crossPlatformIds lastAttributedTouchData setAPIResponseCallback qrCode".split(" "), 0);
+         // init Branch
+         branch.init('key_live_jAozxBAhXn9NYeOS8Vj8BefnDxdempwR'); // Change `key_live_YOUR_KEY_GOES_HERE` to match your Branch Dashboard
+      </script>
+   </head>
+   <body>
+    <h1>This is Page 1</h1>
+    
+    <!-- Create a hyperlink to page2.html -->
+    <a href="page2.html">Go to Page 2</a>
 </body>
 </html>
