--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,5 @@
          branch.init('key_live_jAozxBAhXn9NYeOS8Vj8BefnDxdempwR'); // Change `key_live_YOUR_KEY_GOES_HERE` to match your Branch Dashboard
       </script>
    </head>
-   <body>
-    <h1>This is Page 1</h1>
-    
-    <!-- Create a hyperlink to page2.html -->
-    <a href="page2.html">Go to Page 2</a>
-</body>
+   <body></body>
 </html>
